quantum_v1/plugins/dwave/compiler/generated/DWQMIParser.cpp

// Generated from DWQMI.g4 by ANTLR 4.7.1


#include "DWQMIListener.h"

#include "DWQMIParser.h"


using namespace antlrcpp;
using namespace dwqmi;
using namespace antlr4;

DWQMIParser::DWQMIParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

DWQMIParser::~DWQMIParser() {
  delete _interpreter;
}

std::string DWQMIParser::getGrammarFileName() const {
  return "DWQMI.g4";
}

const std::vector<std::string>& DWQMIParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& DWQMIParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- XaccsrcContext ------------------------------------------------------------------

DWQMIParser::XaccsrcContext::XaccsrcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DWQMIParser::XacckernelContext *> DWQMIParser::XaccsrcContext::xacckernel() {
  return getRuleContexts<DWQMIParser::XacckernelContext>();
}

DWQMIParser::XacckernelContext* DWQMIParser::XaccsrcContext::xacckernel(size_t i) {
  return getRuleContext<DWQMIParser::XacckernelContext>(i);
}


size_t DWQMIParser::XaccsrcContext::getRuleIndex() const {
  return DWQMIParser::RuleXaccsrc;
}

void DWQMIParser::XaccsrcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXaccsrc(this);
}

void DWQMIParser::XaccsrcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXaccsrc(this);
}

DWQMIParser::XaccsrcContext* DWQMIParser::xaccsrc() {
  XaccsrcContext *_localctx = _tracker.createInstance<XaccsrcContext>(_ctx, getState());
  enterRule(_localctx, 0, DWQMIParser::RuleXaccsrc);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DWQMIParser::T__0) {
      setState(42);
      xacckernel();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- XacckernelContext ------------------------------------------------------------------

DWQMIParser::XacckernelContext::XacckernelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::MainprogContext* DWQMIParser::XacckernelContext::mainprog() {
  return getRuleContext<DWQMIParser::MainprogContext>(0);
}

std::vector<DWQMIParser::IdContext *> DWQMIParser::XacckernelContext::id() {
  return getRuleContexts<DWQMIParser::IdContext>();
}

DWQMIParser::IdContext* DWQMIParser::XacckernelContext::id(size_t i) {
  return getRuleContext<DWQMIParser::IdContext>(i);
}

std::vector<DWQMIParser::TypedparamContext *> DWQMIParser::XacckernelContext::typedparam() {
  return getRuleContexts<DWQMIParser::TypedparamContext>();
}

DWQMIParser::TypedparamContext* DWQMIParser::XacckernelContext::typedparam(size_t i) {
  return getRuleContext<DWQMIParser::TypedparamContext>(i);
}


size_t DWQMIParser::XacckernelContext::getRuleIndex() const {
  return DWQMIParser::RuleXacckernel;
}

void DWQMIParser::XacckernelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXacckernel(this);
}

void DWQMIParser::XacckernelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXacckernel(this);
}

DWQMIParser::XacckernelContext* DWQMIParser::xacckernel() {
  XacckernelContext *_localctx = _tracker.createInstance<XacckernelContext>(_ctx, getState());
  enterRule(_localctx, 2, DWQMIParser::RuleXacckernel);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(48);
    match(DWQMIParser::T__0);
    setState(49);
    dynamic_cast<XacckernelContext *>(_localctx)->kernelname = id();
    setState(50);
    match(DWQMIParser::T__1);
    setState(51);
    match(DWQMIParser::T__2);
    setState(52);
    dynamic_cast<XacckernelContext *>(_localctx)->acceleratorbuffer = id();
    setState(57);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DWQMIParser::T__3) {
      setState(53);
      match(DWQMIParser::T__3);
      setState(54);
      typedparam();
      setState(59);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(60);
    match(DWQMIParser::T__4);
    setState(61);
    match(DWQMIParser::T__5);
    setState(62);
    mainprog();
    setState(63);
    match(DWQMIParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- KernelcallContext ------------------------------------------------------------------

DWQMIParser::KernelcallContext::KernelcallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DWQMIParser::IdContext *> DWQMIParser::KernelcallContext::id() {
  return getRuleContexts<DWQMIParser::IdContext>();
}

DWQMIParser::IdContext* DWQMIParser::KernelcallContext::id(size_t i) {
  return getRuleContext<DWQMIParser::IdContext>(i);
}


size_t DWQMIParser::KernelcallContext::getRuleIndex() const {
  return DWQMIParser::RuleKernelcall;
}

void DWQMIParser::KernelcallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterKernelcall(this);
}

void DWQMIParser::KernelcallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitKernelcall(this);
}

DWQMIParser::KernelcallContext* DWQMIParser::kernelcall() {
  KernelcallContext *_localctx = _tracker.createInstance<KernelcallContext>(_ctx, getState());
  enterRule(_localctx, 4, DWQMIParser::RuleKernelcall);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    dynamic_cast<KernelcallContext *>(_localctx)->kernelname = id();
    setState(66);
    match(DWQMIParser::T__1);
    setState(68);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == DWQMIParser::ID) {
      setState(67);
      id();
    }
    setState(74);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == DWQMIParser::T__3) {
      setState(70);
      match(DWQMIParser::T__3);
      setState(71);
      id();
      setState(76);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(77);
    match(DWQMIParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypedparamContext ------------------------------------------------------------------

DWQMIParser::TypedparamContext::TypedparamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DWQMIParser::TypedparamContext::TYPE() {
  return getToken(DWQMIParser::TYPE, 0);
}

DWQMIParser::IdContext* DWQMIParser::TypedparamContext::id() {
  return getRuleContext<DWQMIParser::IdContext>(0);
}


size_t DWQMIParser::TypedparamContext::getRuleIndex() const {
  return DWQMIParser::RuleTypedparam;
}

void DWQMIParser::TypedparamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypedparam(this);
}

void DWQMIParser::TypedparamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypedparam(this);
}

DWQMIParser::TypedparamContext* DWQMIParser::typedparam() {
  TypedparamContext *_localctx = _tracker.createInstance<TypedparamContext>(_ctx, getState());
  enterRule(_localctx, 6, DWQMIParser::RuleTypedparam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(DWQMIParser::TYPE);
    setState(80);
    id();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainprogContext ------------------------------------------------------------------

DWQMIParser::MainprogContext::MainprogContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::ProgramContext* DWQMIParser::MainprogContext::program() {
  return getRuleContext<DWQMIParser::ProgramContext>(0);
}


size_t DWQMIParser::MainprogContext::getRuleIndex() const {
  return DWQMIParser::RuleMainprog;
}

void DWQMIParser::MainprogContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainprog(this);
}

void DWQMIParser::MainprogContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainprog(this);
}

DWQMIParser::MainprogContext* DWQMIParser::mainprog() {
  MainprogContext *_localctx = _tracker.createInstance<MainprogContext>(_ctx, getState());
  enterRule(_localctx, 8, DWQMIParser::RuleMainprog);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    program();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

DWQMIParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DWQMIParser::LineContext *> DWQMIParser::ProgramContext::line() {
  return getRuleContexts<DWQMIParser::LineContext>();
}

DWQMIParser::LineContext* DWQMIParser::ProgramContext::line(size_t i) {
  return getRuleContext<DWQMIParser::LineContext>(i);
}


size_t DWQMIParser::ProgramContext::getRuleIndex() const {
  return DWQMIParser::RuleProgram;
}

void DWQMIParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void DWQMIParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

DWQMIParser::ProgramContext* DWQMIParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 10, DWQMIParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(84);
      line();
      setState(87); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << DWQMIParser::COMMENT)
      | (1ULL << DWQMIParser::ANNEAL)
      | (1ULL << DWQMIParser::ID)
      | (1ULL << DWQMIParser::INT)
      | (1ULL << DWQMIParser::EOL))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

DWQMIParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DWQMIParser::LineContext::EOL() {
  return getToken(DWQMIParser::EOL, 0);
}

std::vector<DWQMIParser::StatementContext *> DWQMIParser::LineContext::statement() {
  return getRuleContexts<DWQMIParser::StatementContext>();
}

DWQMIParser::StatementContext* DWQMIParser::LineContext::statement(size_t i) {
  return getRuleContext<DWQMIParser::StatementContext>(i);
}

DWQMIParser::CommentContext* DWQMIParser::LineContext::comment() {
  return getRuleContext<DWQMIParser::CommentContext>(0);
}


size_t DWQMIParser::LineContext::getRuleIndex() const {
  return DWQMIParser::RuleLine;
}

void DWQMIParser::LineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine(this);
}

void DWQMIParser::LineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine(this);
}

DWQMIParser::LineContext* DWQMIParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 12, DWQMIParser::RuleLine);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(98);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DWQMIParser::ANNEAL:
      case DWQMIParser::ID:
      case DWQMIParser::INT: {
        enterOuterAlt(_localctx, 1);
        setState(90); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(89);
          statement();
          setState(92); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << DWQMIParser::ANNEAL)
          | (1ULL << DWQMIParser::ID)
          | (1ULL << DWQMIParser::INT))) != 0));
        setState(94);
        match(DWQMIParser::EOL);
        break;
      }

      case DWQMIParser::COMMENT: {
        enterOuterAlt(_localctx, 2);
        setState(96);
        comment();
        break;
      }

      case DWQMIParser::EOL: {
        enterOuterAlt(_localctx, 3);
        setState(97);
        match(DWQMIParser::EOL);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

DWQMIParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::AnnealdeclContext* DWQMIParser::StatementContext::annealdecl() {
  return getRuleContext<DWQMIParser::AnnealdeclContext>(0);
}

DWQMIParser::InstContext* DWQMIParser::StatementContext::inst() {
  return getRuleContext<DWQMIParser::InstContext>(0);
}

DWQMIParser::KernelcallContext* DWQMIParser::StatementContext::kernelcall() {
  return getRuleContext<DWQMIParser::KernelcallContext>(0);
}


size_t DWQMIParser::StatementContext::getRuleIndex() const {
  return DWQMIParser::RuleStatement;
}

void DWQMIParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void DWQMIParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

DWQMIParser::StatementContext* DWQMIParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 14, DWQMIParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(109);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DWQMIParser::ANNEAL: {
        enterOuterAlt(_localctx, 1);
        setState(100);
        annealdecl();
        setState(101);
        match(DWQMIParser::T__7);
        break;
      }

      case DWQMIParser::INT: {
        enterOuterAlt(_localctx, 2);
        setState(103);
        inst();
        setState(104);
        match(DWQMIParser::T__7);
        break;
      }

      case DWQMIParser::ID: {
        enterOuterAlt(_localctx, 3);
        setState(106);
        kernelcall();
        setState(107);
        match(DWQMIParser::T__7);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

DWQMIParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DWQMIParser::CommentContext::COMMENT() {
  return getToken(DWQMIParser::COMMENT, 0);
}


size_t DWQMIParser::CommentContext::getRuleIndex() const {
  return DWQMIParser::RuleComment;
}

void DWQMIParser::CommentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComment(this);
}

void DWQMIParser::CommentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComment(this);
}

DWQMIParser::CommentContext* DWQMIParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 16, DWQMIParser::RuleComment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    match(DWQMIParser::COMMENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstContext ------------------------------------------------------------------

DWQMIParser::InstContext::InstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> DWQMIParser::InstContext::INT() {
  return getTokens(DWQMIParser::INT);
}

tree::TerminalNode* DWQMIParser::InstContext::INT(size_t i) {
  return getToken(DWQMIParser::INT, i);
}

DWQMIParser::IdContext* DWQMIParser::InstContext::id() {
  return getRuleContext<DWQMIParser::IdContext>(0);
}

DWQMIParser::RealContext* DWQMIParser::InstContext::real() {
  return getRuleContext<DWQMIParser::RealContext>(0);
}


size_t DWQMIParser::InstContext::getRuleIndex() const {
  return DWQMIParser::RuleInst;
}

void DWQMIParser::InstContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInst(this);
}

void DWQMIParser::InstContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInst(this);
}

DWQMIParser::InstContext* DWQMIParser::inst() {
  InstContext *_localctx = _tracker.createInstance<InstContext>(_ctx, getState());
  enterRule(_localctx, 18, DWQMIParser::RuleInst);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    match(DWQMIParser::INT);
    setState(114);
    match(DWQMIParser::INT);
    setState(118);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DWQMIParser::ID: {
        setState(115);
        id();
        break;
      }

      case DWQMIParser::REAL: {
        setState(116);
        real();
        break;
      }

      case DWQMIParser::INT: {
        setState(117);
        match(DWQMIParser::INT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AnnealdeclContext ------------------------------------------------------------------

DWQMIParser::AnnealdeclContext::AnnealdeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::AnnealContext* DWQMIParser::AnnealdeclContext::anneal() {
  return getRuleContext<DWQMIParser::AnnealContext>(0);
}

DWQMIParser::TaContext* DWQMIParser::AnnealdeclContext::ta() {
  return getRuleContext<DWQMIParser::TaContext>(0);
}

DWQMIParser::TpContext* DWQMIParser::AnnealdeclContext::tp() {
  return getRuleContext<DWQMIParser::TpContext>(0);
}

DWQMIParser::TqContext* DWQMIParser::AnnealdeclContext::tq() {
  return getRuleContext<DWQMIParser::TqContext>(0);
}

DWQMIParser::DirectionContext* DWQMIParser::AnnealdeclContext::direction() {
  return getRuleContext<DWQMIParser::DirectionContext>(0);
}


size_t DWQMIParser::AnnealdeclContext::getRuleIndex() const {
  return DWQMIParser::RuleAnnealdecl;
}

void DWQMIParser::AnnealdeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAnnealdecl(this);
}

void DWQMIParser::AnnealdeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAnnealdecl(this);
}

DWQMIParser::AnnealdeclContext* DWQMIParser::annealdecl() {
  AnnealdeclContext *_localctx = _tracker.createInstance<AnnealdeclContext>(_ctx, getState());
  enterRule(_localctx, 20, DWQMIParser::RuleAnnealdecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    anneal();
    setState(121);
    ta();
    setState(122);
    tp();
    setState(123);
    tq();
    setState(125);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == DWQMIParser::T__8

    || _la == DWQMIParser::T__9) {
      setState(124);
      direction();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TaContext ------------------------------------------------------------------

DWQMIParser::TaContext::TaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::IdContext* DWQMIParser::TaContext::id() {
  return getRuleContext<DWQMIParser::IdContext>(0);
}

DWQMIParser::RealContext* DWQMIParser::TaContext::real() {
  return getRuleContext<DWQMIParser::RealContext>(0);
}

tree::TerminalNode* DWQMIParser::TaContext::INT() {
  return getToken(DWQMIParser::INT, 0);
}


size_t DWQMIParser::TaContext::getRuleIndex() const {
  return DWQMIParser::RuleTa;
}

void DWQMIParser::TaContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTa(this);
}

void DWQMIParser::TaContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTa(this);
}

DWQMIParser::TaContext* DWQMIParser::ta() {
  TaContext *_localctx = _tracker.createInstance<TaContext>(_ctx, getState());
  enterRule(_localctx, 22, DWQMIParser::RuleTa);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(130);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DWQMIParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(127);
        id();
        break;
      }

      case DWQMIParser::REAL: {
        enterOuterAlt(_localctx, 2);
        setState(128);
        real();
        break;
      }

      case DWQMIParser::INT: {
        enterOuterAlt(_localctx, 3);
        setState(129);
        match(DWQMIParser::INT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TpContext ------------------------------------------------------------------

DWQMIParser::TpContext::TpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::IdContext* DWQMIParser::TpContext::id() {
  return getRuleContext<DWQMIParser::IdContext>(0);
}

DWQMIParser::RealContext* DWQMIParser::TpContext::real() {
  return getRuleContext<DWQMIParser::RealContext>(0);
}

tree::TerminalNode* DWQMIParser::TpContext::INT() {
  return getToken(DWQMIParser::INT, 0);
}


size_t DWQMIParser::TpContext::getRuleIndex() const {
  return DWQMIParser::RuleTp;
}

void DWQMIParser::TpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTp(this);
}

void DWQMIParser::TpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DWQMIListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTp(this);
}

DWQMIParser::TpContext* DWQMIParser::tp() {
  TpContext *_localctx = _tracker.createInstance<TpContext>(_ctx, getState());
  enterRule(_localctx, 24, DWQMIParser::RuleTp);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(135);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DWQMIParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(132);
        id();
        break;
      }

      case DWQMIParser::REAL: {
        enterOuterAlt(_localctx, 2);
        setState(133);
        real();
        break;
      }

      case DWQMIParser::INT: {
        enterOuterAlt(_localctx, 3);
        setState(134);
        match(DWQMIParser::INT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TqContext ------------------------------------------------------------------

DWQMIParser::TqContext::TqContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DWQMIParser::IdContext* DWQMIParser::TqContext::id() {
  return getRuleContext<DWQMIParser::IdContext>(0);
}

DWQMIParser::RealContext* DWQMIParser::TqContext::real() {
  return getRuleContext<DWQMIParser::RealContext>(0);
}
